plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.boanni-back'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	// 기본 중앙 저장소
	mavenCentral()
	//저장소 정보 추가
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
	maven {
		name = 'Central Portal Snapshots'
		url = 'https://central.sonatype.com/repository/maven-snapshots/'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	// JJWT API
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	// 런타임 시 실제 구현체
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	// JSON 파싱 (Jackson 사용 시)
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	// properties 값 자동 바인딩
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	// 자동 재시작
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'

	// Groq(OpenAI compatible) Spring AI 의존성
	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M6'
}

tasks.named('test') {
	useJUnitPlatform()
}
